# ShuffleV2-Face-Alignment

./: .gitignore  CMakeLists.txt  ckpt2pb.py  config.json  data_provider.py  dde_bin_loader.cc  detect.py  mdm_eval.py  mdm_inf.py  mdm_model.py  mdm_train.py  utils.py
Lite/: Build.props  Lite.sln
Lite/Lite/: Lite.vcxproj  main.cpp
archive/alpha/: README.md
archive/alpha/augment-1/: config.json  mdm_inf.py  mdm_train.py
archive/alpha/augment-2/: config.json  mdm_eval.py  mdm_train.py
archive/alpha/base/: config.json  mdm_train.py
archive/alpha/color/: config.json  mdm_eval.py  mdm_train.py
archive/alpha/pad/: ckpt2pb.py  config.json  mdm_train.py  utils.py
archive/mdm-32-32-32-wibn-lstm/: mdm_model.py  mdm_train.py
archive/mdm-32-32-32-wibn-rnn/: config.json  mdm_model.py
archive/mdm-32-32-32-wobn-rnn/: config.json  mdm_model.py
archive/mdm-32-32-32-wobn-rnn/extract_patches_op/: extract_patches.cc
archive/mdm-32-32-wibn-rnn/: config.json  mdm_model.py
archive/mdm-32-32-wobn-rnn/: config.json
archive/v0.0.1/: README.md
archive/v0.0.1/0.5x/: config.json  mdm_model.py
archive/v0.0.1/1.0x/: config.json
archive/v0.0.1/1.5x/: config.json  mdm_model.py
archive/v0.0.1/2.0x/: config.json  mdm_eval.py
archive/v0.0.2/: README.md
archive/v0.0.2/occlude-015-100/: config.json  mdm_train.py
archive/v0.0.2/occlude-015-100p/: ckpt2pb.py  config.json
archive/v0.0.2/occlude-020-100/: config.json  (+1 more)
ext/: CMakeLists.txt  dde_bin_loader.cc
extract_patches_op/: build.sh
unit_test/: mdm_model_test.py  utils_test.py
utils/: utils.py  utils_test.py
(+12 files in other folders)
